--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,23 @@
-<header>
-  <nav>
-    <a routerLink="/">Home</a>
-    <a routerLink="/random-champions">Random Lane</a>
-  </nav>
-</header>
-<main>
-  <router-outlet></router-outlet>
-</main>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Improved Navigation</title>
+ 
+</head>
+<body>
+  <header>
+    <nav>
+      <div class="logo">Logo</div>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/random-champions">Random Lane</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</body>
+</html>
