--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-<header>
-  <nav>
-    <a routerLink="/">Home</a>
-    <a routerLink="/random-champions">Random Lane</a>
-  </nav>
-</header>
-<main>
-  <router-outlet></router-outlet>
-</main>
+<app-nav></app-nav>
+<app-content></app-content>
