--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-
-<app-nav></app-nav>
-<app-content></app-content>
+<div style="text-align: center;">
+    <app-nav></app-nav>
+    <app-content></app-content>
+    
+</div>
